--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,17 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.4.3",
     "typescript": "^4.9.5"
   }
 }
