--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "npx nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc"
   },
   "author": "Raul Henrique",
@@ -21,9 +21,13 @@
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@jest/globals": "^29.4.3",
     "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
@@ -31,6 +35,7 @@
     "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
 }
