--- a/client/package.json
+++ b/client/package.json
@@ -6,24 +6,44 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
+    "babel-jest": "^29.4.3",
     "framer-motion": "^9.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
-    "sass": "^1.58.1"
+    "sass": "^1.58.1",
+    "ts-jest": "^29.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
+    "@jest/globals": "^29.4.3",
+    "@testing-library/react": "^14.0.0",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "jsdom": "^21.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
-  }
+  },
+  "moduleFileExtensions": [
+    "js",
+    "ts",
+    "tsx"
+  ]
 }
