--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,6 +16,8 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src"
+, "babel.config.js", "babel.config.js"  ],
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
