--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
+    "axios": "^1.3.3",
     "babel-jest": "^29.4.3",
     "framer-motion": "^9.0.3",
     "identity-obj-proxy": "^3.0.0",
