--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3",
@@ -32,6 +33,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.3",
